[tool.poetry]
name = "autojail"
version = "0.1.0"
description = "Automatic jailhouse configuration for ARM based SOCs"
authors = ["Christoph Gerum <christoph.gerum@uni-tuebingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
automate = {path = "external/automate", optional = true}
pre-commit = "^1.21.0"
pydantic = "^1.4"
pyfdt = "^0.3"
cleo = "^0.8.0"
pyserial = "^3.4"
"ruamel.yaml" = "^0.16.10"

[tool.poetry.extras]
automate = ["automate"]

[tool.poetry.dev-dependencies]
invoke = "^1.4.0"
mkdocs = "^1.0.4"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
mypy = "^0.761"
pytest = "^5.3.5"
devtools = {version = "^0.5.1", extras = ["pygments"]}
beautifulsoup4 = "^4.8.2"
mkdocs-mermaid-plugin = {git = "https://github.com/pugong/mkdocs-mermaid-plugin.git"}
mkdocs-material = "^4.6.3"

[tool.poetry.scripts]
autojail = 'autojail.main:app.run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


