[tool.poetry]
name = "autojail"
version = "0.1.0"
description = "Automatic jailhouse configuration for ARM based SOCs"
authors = ["Christoph Gerum <christoph.gerum@uni-tuebingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.4"
pyfdt = "^0.3"
cleo = "^0.8.0"
pyserial = "^3.4"
"ruamel.yaml" = "^0.16.10"
fabric = "^2.5.0"
simpleeval = "^0.9.10"
tabulate = "^0.8.7"
fdt = "^0.2.0"
#automate = {git = "git@atreus.informatik.uni-tuebingen.de:ties/timing/schrank/automate.git", optional = true}

mako = "^1.1.3"
ortools = "^8.0.8283"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
[tool.poetry.extras]
#automate = ["automate"]

[tool.poetry.dev-dependencies]
invoke = "^1.4.0"
mkdocs = "^1.0.4"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
mypy = "^0.800"
pytest = "^5.3.5"
devtools = {version = "^0.5.1", extras = ["pygments"]}
beautifulsoup4 = "^4.8.2"
mkdocs-mermaid-plugin = {git = "https://github.com/pugong/mkdocs-mermaid-plugin.git"}
mkdocs-material = "^4.6.3"
mccabe = "^0.6.1"
flake8-bugbear = "^20.1.4"
pep8-naming = "^0.11.1"
pytest-cov = "^2.10.0"
isort = "^5.2.0"
monkeytype = "^20.5.0"
pre-commit = "^1.21.0"
pytest-coverage = "^0.0"
rope = "^0.18.0"

[tool.poetry.scripts]
autojail = 'autojail.main:app.run'

[[tool.poetry.source]]
name = "gerum"
url = "https://atreus.informatik.uni-tuebingen.de/~gerum/dist"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


